GNOME Bugzilla – Bug 723568
Find and Replace problem when "Replace with" is empty
Last modified: 2014-02-07 13:53:51 UTC
Open bluefish and type something in the editor, say xyz. Open "Find and Replace" dialog and type xy in the search field, leave "Replace with" empty them hit "Replace". The message "Some documents are still loading" appears, but there is no file loading, and the expected result does not occur. By expected result I mean, erase xy so that we have just "z" instead of "xyz".
Nevermind. Deleting .bluefish folder resolved the problem. Probably there was something wrong with configs (upgraded to 2.2.5 from 2.2.4). Sorry.
if you have a backup of the old settings please send them. even with old settings this should not have happened
Created attachment 268113 [details] Bluefish config folder
(In reply to comment #3) > Created an attachment (id=268113) [details] > Bluefish config folder Recoreved from trash. The problem occurs again.
it was caused by the default template setting, the template did not exist, and bluefish did not handle that situation very well. fixed in svn