fix new document when the template does not exist, fixes https://bugzilla.gnome.org/show_bug.cgi?id=723568

git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@8225 7640d186-872a-4c71-b7b2-a5696852cc35